Fix margin spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -77,7 +77,7 @@ header {
 
 .account-route-modal {
     margin: 0 auto;
-    margin-top: var(--mantine-spacing-lg);
+    margin-bottom: var(--mantine-spacing-xl);
     max-width: 320px;
     border-color: var(--mantine-color-text);
 
